--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,13 @@
 /* App Size */
 
 #root {
-    max-width: 320px;
+    width: 320px;
     margin: 0 auto;
+} 
+
+.container {
+    display: block;
+    position: absolute;
+    margin-top: 200px;
+    /* visibility: hidden; */
 }
