--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,4 +1,4 @@
-/* Dashboard Page Styles
+/* Styles
 red: #E91E63
 blue: #2196F3
 yellow: #FFCA28
@@ -10,81 +10,49 @@ font-family: 'Roboto', sans-serif;
 font-family: 'Open Sans Condensed', sans-serif;
 */
 
-.main-content-view {
+.dash-content-view {
     background-color: #00003F;
     color: white;
     border-bottom-left-radius: 5mm;
     border-bottom-right-radius: 5mm;
     font-family: 'Quicksand', sans-serif; 
     font-size: 10px;
-    padding-bottom: 5px;
+    padding-bottom: 90px;
 }
 
-.main-content-view #settings {
+.dash-content-view #settings {
     display: flex;
     position: absolute;
     width: 15px;
     padding: 2px;
 }
 
-.main-content-view #settings:hover {
+.dash-content-view #settings:hover {
     opacity: 1;
     transition: 700ms ease;
     opacity: .5;
 }
 
-.main-content-view h1 {
+.dash-content-view h1 {
     display: block;
     text-align: center;
     padding-top: 10px;
     font-size: 1rem;
     margin-top: -30px;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
 
-.main-content-view h2 {
+.dash-content-view h2 {
     display: block;
     text-align: right;
     font-size: .4rem;
     padding: 2px;
 }
 
-.main-content-view h3 {
+.dash-content-view h3 {
     display: block;
     text-align: right;
     font-size: .6rem;
     margin-right: 2px;
     margin-bottom: 15px;
-}
-
-/* Navigation Links */
-
-.navigation-links {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.navigation-links .navImg {
-    border: solid 1px black;
-    display: flex;
-    width: 70px;
-    border-radius: 2mm;
-}
-
-.navigation-links .navlinks img {
-    display: flex;
-    width: 70px;
-}
-
-.navigation-links .navlinks .navImg:hover {
-    opacity: 1;
-    transition: 500ms ease-in-out;
-    opacity: .8;
-}
-
-.navigation-links .navlinks .navInfo {
-    text-align: center;
-    padding: 5px;
 }
