--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -160,18 +160,22 @@ font-family: 'Open Sans Condensed', sans-serif;
     width: 20px;
 }
 
-.results ul li p {
-    font-family: 'Quicksand', sans-serif;  
-    text-align: left;
-    font-size: 1rem;
+.results p {
     margin-top: 2px;
-    padding-left: 28px;
-    width: 82%;
+    width: 265px;
+}
+
+#text-in-list {
+  font-family: 'Quicksand', sans-serif;  
+  text-align: left;
+  overflow-wrap: break-word;
+  font-size: 1rem;
+  padding-left: 20px;
+  padding-right: 10px;
 }
 
 .remove img {
   width: 10px;
-  margin-right: -25px;
 }
 
 .remove {
