--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -10,35 +10,15 @@ font-family: 'Roboto', sans-serif;
 font-family: 'Open Sans Condensed', sans-serif;
 */
 
-.navigation-links {
+.navigation-container {
+    
+}
+
+.navigation-image {
     display: flex;
-    width: 300px;
-    margin: 0 auto;
-    margin-top: -100px;
-    justify-content: space-evenly;
-}
-
-.navlinks {
-    padding: 10px;
-}
-
-.navImg {
     border-radius: 2mm;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
 }
 
-.navImg:hover {
-    transition: 500ms ease-in-out;
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
-.navImg img {
+.navigation-image img {
     width: 70px;    
 }
