--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -12,188 +12,7 @@ font-family: 'Open Sans Condensed', sans-serif;
 */
 
 /* Buzz Out */
-@-webkit-keyframes hvr-buzz-out {
-  10% {
-    -webkit-transform: translateX(3px) rotate(2deg);
-    transform: translateX(3px) rotate(2deg);
-  }
-  20% {
-    -webkit-transform: translateX(-3px) rotate(-2deg);
-    transform: translateX(-3px) rotate(-2deg);
-  }
-  30% {
-    -webkit-transform: translateX(3px) rotate(2deg);
-    transform: translateX(3px) rotate(2deg);
-  }
-  40% {
-    -webkit-transform: translateX(-3px) rotate(-2deg);
-    transform: translateX(-3px) rotate(-2deg);
-  }
-  50% {
-    -webkit-transform: translateX(2px) rotate(1deg);
-    transform: translateX(2px) rotate(1deg);
-  }
-  60% {
-    -webkit-transform: translateX(-2px) rotate(-1deg);
-    transform: translateX(-2px) rotate(-1deg);
-  }
-  70% {
-    -webkit-transform: translateX(2px) rotate(1deg);
-    transform: translateX(2px) rotate(1deg);
-  }
-  80% {
-    -webkit-transform: translateX(-2px) rotate(-1deg);
-    transform: translateX(-2px) rotate(-1deg);
-  }
-  90% {
-    -webkit-transform: translateX(1px) rotate(0);
-    transform: translateX(1px) rotate(0);
-  }
-  100% {
-    -webkit-transform: translateX(-1px) rotate(0);
-    transform: translateX(-1px) rotate(0);
-  }
-}
-@keyframes hvr-buzz-out {
-  10% {
-    -webkit-transform: translateX(3px) rotate(2deg);
-    transform: translateX(3px) rotate(2deg);
-  }
-  20% {
-    -webkit-transform: translateX(-3px) rotate(-2deg);
-    transform: translateX(-3px) rotate(-2deg);
-  }
-  30% {
-    -webkit-transform: translateX(3px) rotate(2deg);
-    transform: translateX(3px) rotate(2deg);
-  }
-  40% {
-    -webkit-transform: translateX(-3px) rotate(-2deg);
-    transform: translateX(-3px) rotate(-2deg);
-  }
-  50% {
-    -webkit-transform: translateX(2px) rotate(1deg);
-    transform: translateX(2px) rotate(1deg);
-  }
-  60% {
-    -webkit-transform: translateX(-2px) rotate(-1deg);
-    transform: translateX(-2px) rotate(-1deg);
-  }
-  70% {
-    -webkit-transform: translateX(2px) rotate(1deg);
-    transform: translateX(2px) rotate(1deg);
-  }
-  80% {
-    -webkit-transform: translateX(-2px) rotate(-1deg);
-    transform: translateX(-2px) rotate(-1deg);
-  }
-  90% {
-    -webkit-transform: translateX(1px) rotate(0);
-    transform: translateX(1px) rotate(0);
-  }
-  100% {
-    -webkit-transform: translateX(-1px) rotate(0);
-    transform: translateX(-1px) rotate(0);
-  }
-}
- 
-#task-input input[type=text] {
-  background-color: #00003F;
-  color: white;
-  width: 200px;
-  padding: 5px 5px;
-  box-sizing: border-box;
-  border: 3px solid #26267B;
-  border-radius: 5px;
-  font-size: 16px;
-  margin-right: 2px;
-}
 
-#task-input #enter {
-  background-color: #00003F;
-  color: #777777;
-  padding: 5px 5px;
-  box-sizing: border-box;
-  border: 3px solid #26267B;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-#task-input {
-  display: block;
-  margin-top: -250px;
-  padding: 10px;
-  text-align: center;
-  width: 310px;
-}
-
-.results {
-  margin: 0 auto;
-  margin-top: 110px;
-  width: 320px;
-}
-
-.results ul li {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: left;
-  padding: 5px;
-  border-radius: 5px;
-  margin-bottom: 2px;
-}
-
-.results ul li:hover {
-  -webkit-transition: background-color 1s ease-out;
-  -moz-transition: background-color 1s ease-out;
-  -o-transition: background-color 1s ease-out;
-  transition: background-color 1s ease-out;
-  background-color: #5DADE2;
-  cursor: pointer;
-}
-.results img {
-  width: 20px;
-}
-
-.results .creature {
-  display: block;
-  position: absolute;
-  width: 20px; 
-}
-
-.results p {
-  margin-top: 2px;
-  width: 265px;
-}
-
-#text-in-list {
-  font-family: 'Quicksand', sans-serif;  
-  text-align: left;
-  overflow-wrap: break-word;
-  font-size: 1rem;
-  padding-left: 25px;
-  padding-right: 10px;
-}
-
-.remove img {
-  width: 10px;
-}
-
-.remove {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-
-.remove:hover, .remove:focus, .remove:active {
-  -webkit-animation-name: hvr-buzz-out;
-  animation-name: hvr-buzz-out;
-  -webkit-animation-duration: 0.75s;
-  animation-duration: 0.75s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-  cursor: pointer;
+.main-content-view {
+  color: #eee;
 }
