--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -13,6 +13,6 @@ font-family: 'Open Sans Condensed', sans-serif;
 
 /* Buzz Out */
 
-.main-content-view {
-  color: #eee;
+.task-page-view {
+  font-family: 'Quicksand', sans-serif;  
 }
