trying to understand how to work around immutable state

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -16,3 +16,8 @@ font-family: 'Open Sans Condensed', sans-serif;
 .task-page-view {
   font-family: 'Quicksand', sans-serif;  
 }
+
+.button {
+  /* display: block; */
+  margin-left: 20px;
+}
