--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -21,38 +21,7 @@ font-family: 'Open Sans Condensed', sans-serif;
     padding-bottom: 100px;  
 }
 
-/* Hamdurdur Menu */
-
-.hamburger {
-    display: block;
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    margin-top: 2px;
-    margin-left: 2px;
-}
-
-.hamburger-lines {
-    display: block;
-    margin: 0 auto;
-    margin-top: 3px;
-    border-top: solid 1px #eee;
-    width: 10px;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-}
-
-.hamburger:hover {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
-/* Dashboard */
+/* Dashboard Styles */
 
 .dashboard-content-view h1 {
     text-align: center;
