going another direction with styling... not using svg icons

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -10,12 +10,9 @@ font-family: 'Roboto', sans-serif;
 font-family: 'Open Sans Condensed', sans-serif;
 */
 
-.navigation-container {
-    
-}
-
 .navigation-image {
     display: flex;
+    width: 70px;
     border-radius: 2mm;
 }
 
