--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -39,16 +39,15 @@
     border-radius: 1.5mm;
     color: black;
     background-color: white;
-    border: solid 1px black;
+    border: solid 2px #00003F;
     padding: 2px;
     font-size: .5rem;
     width: 140px;
     margin: 10px;
-    border: solid 1px white;
 }
 
 .settings-list {
-    margin-bottom: 2px;
+    margin: 2px;
 }
 
 .settings-list:hover {
