--- a/src/styles/goals.css
+++ b/src/styles/goals.css
@@ -11,3 +11,20 @@
     display: block;
     visibility: hidden;
 }
+
+.title {
+    display: flex;
+    position: absolute;
+}
+
+.span-toggle {
+    display: flex;
+    justify-content: flex-end;
+    font-size: .6rem;
+    margin-bottom: 20px;
+}
+
+.strong {
+    font-weight: bold;
+}
+  
