--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -33,6 +33,21 @@ font-family: 'Open Sans Condensed', sans-serif;
 .task-contents {
   margin-top: 60px;
 } */
+.title {
+  display: flex;
+  position: absolute;
+}
+
+.span-toggle {
+  display: flex;
+  justify-content: flex-end;
+  font-size: .6rem;
+  margin-bottom: 20px;
+}
+
+.strong {
+  font-weight: bold;
+}
 
 .span-item {
   color:white;
