somewhat unsightly, but added a tomorrow's page in TasksPage.js instead of its own component, but it's working. Maybe I'll break it later.

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -38,6 +38,9 @@ font-family: 'Open Sans Condensed', sans-serif;
   position: absolute;
 }
 
+.toggle-tasks {
+  display: block;
+}
 .span-toggle {
   display: flex;
   justify-content: flex-end;
