--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -26,6 +26,7 @@ font-family: 'Open Sans Condensed', sans-serif;
   border-bottom: 2px solid #00FF00;
   border-right: 2px solid #00FF00;
   margin-right: 15px;
+  margin-left: 20px;
 }
 
 .task-page-view {
