--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -11,17 +11,20 @@ font-family: 'Open Sans Condensed', sans-serif;
 
 320 x 480
 */
-
 .container {
+    position: relative;
+    width: 320px;
+    height: 480px;
+    margin: 0 auto;
+    /* border: solid 2px red; */
+}
+.dashboard-container {
     background-color: #00003F;
     color: white;
     border-bottom-left-radius: 5mm;
     border-bottom-right-radius: 5mm;
-    width: 320px;
-    height: 480px;
-    margin: 0 auto;
     font-family: 'Quicksand', sans-serif;
-    padding-bottom: 100px;  
+    height: 230px;
 }
 
 /* Modal */
@@ -91,6 +94,8 @@ font-family: 'Open Sans Condensed', sans-serif;
     margin-bottom: 5px;    
 }
 
-.navigation-link {
-    
+#points {
+    position: absolute;
+    bottom: 0px;
+    color: black;
 }
