--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -16,6 +16,27 @@ font-family: 'Open Sans Condensed', sans-serif;
     display:block;
     margin:0.4em auto;
   }
+
+  .clear-button {
+    display:block;
+    margin:0.2em auto;
+  }
+}
+
+.title {
+  display: flex;
+  position: absolute;
+}
+
+.span-toggle {
+  display: flex;
+  justify-content: flex-end;
+  font-size: .6rem;
+  margin-bottom: 20px;
+}
+
+.strong {
+  font-weight: bold;
 }
 
 .check {
@@ -29,25 +50,12 @@ font-family: 'Open Sans Condensed', sans-serif;
   margin-left: 20px;
 }
 
-.task-page-view {
-  /* border: solid 1px red; */
+.toggle-tasks {
+  display: block;
+  margin-top: -10px;
+  font-size: .5rem;
 }
 
-.todays-page {
-  display: block;
-  /* border: solid 1px white; */
-}
-
-.tomorrows-page {
-  display: block;
-  /* border: solid 1px white; */
-}
-
-.form-label {
-  display: block;
-  font-size: .8rem;
-  margin-top: -20px;
-}
 #form-input {
   background: 0;
   color: #929292;
@@ -57,7 +65,7 @@ font-family: 'Open Sans Condensed', sans-serif;
   width: 188px;
   font-size: 1.5em;
   transition: padding 0.3s 0.2s ease;
-  /* border: solid 1px white; */
+  margin-top: -10px;
 }
 
 #form-input:focus + .line:after {
@@ -108,5 +116,37 @@ font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .task-contents {
+  position: fixed;
+  margin-top: 20px;
+  color: white;
+  width: 278px;
+  height: 218px;
+  border: solid 1px black;
+}
+
+/* .item-view {
   padding: 5px;
+} */
+
+.clear-button {
+  display:inline-block;
+  position: absolute;
+  background-color:#4eb5f1;
+  box-sizing: border-box;
+  border-radius:2em;
+  text-decoration:none;
+  padding:0.3em 1.2em;
+  border: 0;
+  right: 0;
+  bottom: 0;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  font-size: .8rem;
+  color:#FFFFFF;
+  text-align:center;
+  transition: all 0.4s;
+}
+
+.clear-button:hover {
+  background-color:#4095c6;
 }
