more styling... taking forever

--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -27,6 +27,7 @@
 .hamburger:hover {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+    cursor: pointer;
 }
 /* Settings Styles */
 
