--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -11,12 +11,14 @@ font-family: 'Open Sans Condensed', sans-serif;
 
 320 x 480
 */
+
+/* Entire App Content View */
 .container {
     position: relative;
     width: 320px;
     height: 480px;
     margin: 0 auto;
-    /* border: solid 2px red; */
+    border: solid .5px black;
 }
 .dashboard-container {
     background-color: #00003F;
@@ -28,7 +30,6 @@ font-family: 'Open Sans Condensed', sans-serif;
 }
 
 /* Modal */
-
 .modal-container {
     align-items: center;
     justify-content: center;
@@ -54,7 +55,6 @@ font-family: 'Open Sans Condensed', sans-serif;
 }
 
 /* Dashboard Styles */
-
 .dashboard-content-view h1 {
     text-align: center;
     font-size: 1.3rem;
@@ -93,9 +93,10 @@ font-family: 'Open Sans Condensed', sans-serif;
     padding: 5px;
     margin-bottom: 5px;    
 }
-
+/* total points */
 #points {
     position: absolute;
     bottom: 0px;
     color: black;
+    padding: 5px;
 }
