--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -49,7 +49,8 @@ font-family: 'Open Sans Condensed', sans-serif;
   border-bottom: 2px solid #00FF00;
   border-right: 2px solid #00FF00;
   margin-right: 15px;
-  margin-left: 20px;
+  position: absolute;
+  margin-left: -11px;
 }
 /* toggle switches between today page or tomorrow page */
 .toggle-tasks {
@@ -103,7 +104,7 @@ font-family: 'Open Sans Condensed', sans-serif;
   border-radius:0.12em;
   box-sizing: border-box;
   text-decoration:none;
-  font-family:'Roboto',sans-serif;
+  font-family: 'Quicksand', sans-serif;  
   font-weight:300;
   color:#FFFFFF;
   text-align:center;
@@ -127,7 +128,6 @@ font-family: 'Open Sans Condensed', sans-serif;
   color: black;
   width: 278px;
   height: 218px;
-  border: solid 1px black;
 }
 
 .task-item {
@@ -139,15 +139,17 @@ font-family: 'Open Sans Condensed', sans-serif;
 .item-view {
   display: flex;
   flex-direction: column;
-  border: solid 1px red;
+}
+
+.span-item {
+  margin-left: 5px;
 }
 /* remove item button */
 .remove-button {
-  border: solid 1px black;
   display: flex;
-  justify-content: flex-end;
+  position: absolute;
+  right: 0;
   font-size: .6rem;
-  /* margin-bottom: 20px; */
   cursor: pointer;
 }
 /* button that clears completed tasks */
