--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -26,7 +26,8 @@ font-family: 'Open Sans Condensed', sans-serif;
     border-bottom-left-radius: 5mm;
     border-bottom-right-radius: 5mm;
     font-family: 'Quicksand', sans-serif;
-    height: 230px;
+    min-height: 185px;
+    max-height: 230px;
 }
 
 /* Modal */
