--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -22,24 +22,41 @@ font-family: 'Open Sans Condensed', sans-serif;
     margin:0.2em auto;
   }
 }
+
+.task-page-view {
+  /* border: solid 2px red; */
+}
+.todays-page {
+  /* border: solid 1px blue; */
+}
+.tomorrows-page {
+  /* border: solid 1px blue; */
+}
+
 /* Today's Tasks/Tomorrow's Tasks Title */
 .title {
   display: flex;
   position: absolute;
+  margin-top: 10px;
+}
+/* toggle switches between today page or tomorrow page */
+.toggle-tasks {
+  display: block;
+  position: absolute;
+  font-size: .5rem;
+}
+.strong {
+  font-weight: bold;
+  cursor: pointer;
 }
 /* add task/hide */
 .span-toggle {
   display: flex;
   justify-content: flex-end;
   font-size: .6rem;
-  margin-bottom: 20px;
   cursor: pointer;
 }
 
-.strong {
-  font-weight: bold;
-  cursor: pointer;
-}
 /* checkmark */
 .check {
   display: inline-block;
@@ -52,24 +69,19 @@ font-family: 'Open Sans Condensed', sans-serif;
   position: absolute;
   margin-left: -11px;
 }
-/* toggle switches between today page or tomorrow page */
-.toggle-tasks {
-  display: block;
-  margin-top: -10px;
-  font-size: .5rem;
-}
 /* form */
 #form-input {
+  border: solid 1px white;
   background: 0;
   color: #FFFFFF;
   padding-left: 10px;
   border: 0;
   outline: none;
-  width: 188px;
+  width: 200px;
   font-family: 'Quicksand', sans-serif;  
   font-size: 1.5em;
   transition: padding 0.3s 0.2s ease;
-  margin-top: -10px;
+  margin-top: 10px;
 }
 
 #form-input:focus + .line:after {
@@ -77,7 +89,7 @@ font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .line {
-  width: 200px;
+  width: 220px;
   height: 3px;
   bottom: -8px;
   border-radius: 2mm;
@@ -88,40 +100,38 @@ font-family: 'Open Sans Condensed', sans-serif;
   position: fixed;
   content: " ";
   float: right;
-  width: 200px;
+  width: 220px;
   height: 3px;
   transform: scalex(0);
   transition: transform 0.3s ease;
   background: #E91E63;
 }
-  
+
+#task-form {
+  /* border: solid 1px blue; */
+}
+
 #form-button {
-  display:block;
+  display: block;
   float: right;
   background-color:#00003F;
-  padding:0.20em .5em;
+  padding: 0.20em 0;
   border: 0;
-  margin:0 0.3em 0.3em 0;
+  margin: 0 0.3em 0.3em 0;
   border-radius:0.12em;
   box-sizing: border-box;
   text-decoration:none;
   font-family: 'Quicksand', sans-serif;  
-  font-weight:300;
   color:#FFFFFF;
-  text-align:center;
+  text-align: center;
   transition: all 0.2s;
   margin-top: -30px;
-  margin-bottom: 20px;
 }
 
 #form-button:hover{
   color:#1abc9c;
 }
-/* spacer saves space for the form and keeps content below fixed */
-.form-spacer {
-  display: block;
-  margin-bottom: 39.5px;
-}
+
 /* tasks item area */
 .task-contents {
   position: fixed;
@@ -129,23 +139,32 @@ font-family: 'Open Sans Condensed', sans-serif;
   color: black;
   width: 278px;
   height: 218px;
+  /* border: solid 2px black; */
 }
 
 .task-item {
   display: flex;
   align-items: center;
-  border-bottom: .5px solid #4095c6;
+  /* border-bottom: .5px solid #4095c6; */
 }
 
 .item-view {
+  /* border: solid 1px red; */
   display: flex;
   flex-direction: column;
 }
 
 .span-item {
+  display: inline-block;
   margin-left: 5px;
   cursor: pointer;
+  border: solid .5px #5DADE2;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  width: 280px;
 }
+
 /* remove item button */
 .remove-button {
   display: flex;
